--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ session-10-promises/package-lock.json
 session-11-client-server-app/chat-server/node_modules/
 session-11-client-server-app/chat/node_modules/
 session-11-client-server-app/chat-server/package-lock.json
+session-12-commandline-tool/node_modules/
