--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ session-11-client-server-app/chat-server/node_modules/
 session-11-client-server-app/chat/node_modules/
 session-11-client-server-app/chat-server/package-lock.json
 session-12-commandline-tool/node_modules/
+
+/session-15-e2e/node_modules/
+/session-16-electron/node_modules/
+/session-17-mocha/node_modules/
+/session-17-mocha/.nyc_output/
